# Vertex-Data-Plugin-Code

./: .gitmodules  CMakeLists.txt  HelloTriangleApplication.cpp  HelloTriangleApplication.h  README.md  libokularGenerator_vertex_data.json  okularApplication_vertex_data.desktop  okularVertexData.desktop  org.kde.mobile.okular_vertex_data.desktop  org.kde.okular-vertex-data.metainfo.xml  triangle.vertexdata  vertex-data-mime.xml  vertex_data_generator.cpp  vertex_data_generator.h
